@startuml Class Diagram - Booking System

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' ==================== MODELS ====================

class User {
    +id_user: bigint <<PK>>
    +name: string(100)
    +email: string(255)
    +phone: string(15)
    +address: text
    +password: string
    +profile_photo: string(255)
    +last_login_at: datetime
    +is_active: boolean
    +email_verified_at: datetime
    +remember_token: string
    +created_at: timestamp
    +updated_at: timestamp
    --
    +getProfilePhotoUrlAttribute(): string
}

class Category {
    +id_category: bigint <<PK>>
    +name: string(100)
    +description: text
    +icon: string(50)
    +is_active: boolean
    +created_at: timestamp
    +updated_at: timestamp
    --
    +services(): HasMany
}

class Service {
    +id_service: bigint <<PK>>
    +id_category: bigint <<FK>>
    +name: string(100)
    +description: text
    +price: decimal(10,2)
    +duration: integer
    +image: string(255)
    +is_active: boolean
    +created_at: timestamp
    +updated_at: timestamp
    --
    +category(): BelongsTo
    +bookings(): HasMany
    +promotions(): HasMany
}

class Promotion {
    +id_promotion: bigint <<PK>>
    +title: string(150)
    +description: text
    +id_service: bigint <<FK>>
    +discount_percentage: decimal(5,2)
    +discount_amount: decimal(10,2)
    +image: string(255)
    +promo_date: date
    +is_active: boolean
    +created_at: timestamp
    +updated_at: timestamp
    --
    +service(): BelongsTo
    +scopeActive(query)
    +scopeActiveOnDate(query, date)
    +scopeActiveToday(query)
    +getForService(serviceId, date): Promotion
    +calculateDiscountedPrice(price): decimal
}

class Booking {
    +id_booking: bigint <<PK>>
    +booking_code: string(20)
    +id_user: bigint <<FK>>
    +id_service: bigint <<FK>>
    +id_promotion: bigint <<FK>>
    +booking_date: date
    +booking_time: time
    +status: enum
    +notes: text
    +total_price: decimal(10,2)
    +original_price: decimal(10,2)
    +payment_proof: string(255)
    +payment_uploaded_at: datetime
    +created_at: timestamp
    +updated_at: timestamp
    --
    +user(): BelongsTo
    +service(): BelongsTo
    +promotion(): BelongsTo
    +confirmation(): HasOne
    +cancellation(): HasOne
    +hasPromo(): boolean
    +generateBookingCode(): string
}

class BookingConfirmation {
    +id_booking_confirmation: bigint <<PK>>
    +id_booking: bigint <<FK>>
    +id_user_confirmed_by: bigint <<FK>>
    +confirmation_date: datetime
    +payment_proof: string(255)
    +bank_name: string(50)
    +account_number: string(25)
    +account_name: string(100)
    +notes: text
    +created_at: timestamp
    +updated_at: timestamp
    --
    +booking(): BelongsTo
    +confirmedBy(): BelongsTo
}

class Cancellation {
    +id_cancellation: bigint <<PK>>
    +id_booking: bigint <<FK>>
    +id_user_cancelled_by: bigint <<FK>>
    +reason: text
    +cancelled_at: datetime
    +created_at: timestamp
    +updated_at: timestamp
    --
    +booking(): BelongsTo
    +cancelledBy(): BelongsTo
}

' ==================== RELATIONSHIPS ====================

Category "1" --> "*" Service : has many
Service "1" --> "*" Booking : has many
Service "1" --> "*" Promotion : has many
User "1" --> "*" Booking : has many
Promotion "0..1" --> "*" Booking : applied to
Booking "1" --> "0..1" BookingConfirmation : has one
Booking "1" --> "0..1" Cancellation : has one
User "1" --> "*" BookingConfirmation : confirmed by
User "1" --> "*" Cancellation : cancelled by

@enduml
